vlib/v/checker/tests/assign_mut.vv
fn main() {
    mut z := 1
    mut z = 1
    mut i := 2
    i, mut z = 2,3
}
